# Argus-AI

./: .gitignore  README.md  REPOSITORY_CLEANUP_PLAN.md  main.py  pyproject.toml  requirment.txt  task.md
argus/code_review/datasets/processed/: argus_code_review_v2.jsonl
argus/code_review/evaluation/_archive/: balance_report.md  language_distribution.md  source_audit.md  validation_report.md
argus/code_review/evaluation/active/: final_validation_summary.md
argus/code_review/training/: train_code_review.py
argus/resume/: README.md  cleanup_audit_report.md
argus/resume/adapter/resume_adapter_v2/: adapter_config.json  tokenizer_config.json
argus/resume/api/: main.py  model_loader.py  prompts.py  schemas.py
argus/resume/api/services/: job_fit.py  review.py  section_classifier.py  summary.py
argus/resume/evaluation/: adapter_sampling_simulation.md  dataset_balance_report.md  final_dataset_validation_report_v2.md  instruction_audit_report.md  job_fit_dedup_report.md  notebooklm_source_report.md  resume_job_fit_data_card.md  resume_job_fit_report_after.md  resume_job_fit_report_before.md  resume_job_fit_samples.md  resume_job_training_optimization_report.md  resume_sections_report_after.md  resume_sections_report_before.md  resume_sections_samples.md  resume_summary_report_after.md  resume_summary_report_before.md  resume_summary_samples.md  resume_summary_token_analysis.md  summary_quality_audit.md
argus/resume/models/: resume_adapter_v2_final
argus/resume/scripts/: token_analysis.py
notebooks/:  resume_adapter_v1_training.ipynb
tests/: test_api.py
(+36 files in other folders)
