[project]
name = "argus-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "accelerate>=1.14.0",
    "bitsandbytes>=0.49.2",
    "datasets>=5.0.0",
    "evaluate>=0.4.6",
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "peft>=0.19.1",
    "protobuf>=7.35.1",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.9.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "sentencepiece>=0.2.1",
    "tensorboard>=2.20.0",
    "torch>=2.12.0",
    "tqdm>=4.68.2",
    "transformers>=5.12.1",
    "trl>=1.6.0",
]
